=head1 Krang Changelog

This document contains a list of changes for each release of Krang.



=head2 3.01 - IN DEVELOPMENT

=over

=item *

Made previewing from story-edit screen validate and then display the user's
latest changes (i.e. changes they haven't yet saved). [Noam Weinstein]

=item *

Made missing-template errors show the actual name of a missing file
even if it was included by another template. [Noam Weinstein]

=item *

Added alerts notifying user if the template or media file being edited was
modified by another user or window. (This used to crash.) [Noam Weinstein]

=item *

Implemented admin perm 'admin_users_limited'.  Redirect to login
screen if user tampers with GID params. [Bodo Schulze]

=item *

Added new option --no_default to F<bin/krang_useradd> to prevent the user
being associated with group 'default'. [Bodo Schulze]

=item *

Added real-time client-side syntax-highlighting (the CodePress library) to 
the textareas used for viewing and editing Templates.  Thanks to Jesse for 
suggesting this feature, and finding the most excellent CodePress.org project!
[David Kaufman]

=item *

Completed v1 of multiple-window, multiple-session support, allowing a user 
to open multiple stories, templates, publishing windows, etc. at the same time,
and log off each window individually or all together. [Noam Weinstein]

=item *

Implemented requested "Replace Story" feature where instead of a simple duplicate-URL
error, creating a story that conflicts with existing URLs now yields a dialogue box 
giving users the option of overwriting the duplicate URLs. [Noam Weinstein]

=item *

Removed deprecated Story "Priority". [Noam Weinstein]

=back



=head2 3.00 - November 20th, 2007

=over

=item *

Added platform file for RedHat Enterprise Server 5 (ES5) [Jesse Erlbaum]

=item *

Added F<bin/krang_dump_session> CLI util to help track down session
problems. [Michael Peters]

=item *

Fixed small bugs in TimeChooser where hour/mins of 0 were taken to be null,